--- a/GameLauncher/App.xaml
+++ b/GameLauncher/App.xaml
@@ -1,9 +1,15 @@
-﻿<Application x:Class="GameLauncher.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameLauncher"
-             StartupUri="MainWindow.xaml">
+<Application x:Class="GameLauncher.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="clr-namespace:GameLauncher" StartupUri="MainWindow.xaml" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" d1p1:Ignorable="d" xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            
+            <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:GameLauncher.ViewModel" />
+
+            <!-- Image assets -->
+            <BitmapImage UriSource="/Assets/Images/ListIcon.png" x:Key="DetailsListIcon" />
+            <BitmapImage UriSource="/Assets/Images/BigIcons.png" x:Key="ImageListIcon" />
+            <BitmapImage UriSource="/Assets/images/AddIcon.png" x:Key="AddIcon" />
+            <BitmapImage UriSource="/Assets/Images/SearchIcon.png" x:Key="SearchIcon" />
+
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
