--- a/GameLauncher/App.xaml
+++ b/GameLauncher/App.xaml
@@ -9,6 +9,8 @@
             <BitmapImage UriSource="/Assets/Images/BigIcons.png" x:Key="ImageListIcon" />
             <BitmapImage UriSource="/Assets/images/AddIcon.png" x:Key="AddIcon" />
             <BitmapImage UriSource="/Assets/Images/SearchIcon.png" x:Key="SearchIcon" />
+            <BitmapImage UriSource="/Assets/Images/DeleteIcon.png" x:Key="DeleteIcon" />
+            <BitmapImage UriSource="/Assets/Images/HelpIcon.png" x:Key="AboutIcon" />
 
         </ResourceDictionary>
     </Application.Resources>
