--- a/GameLauncher/MainWindow.xaml
+++ b/GameLauncher/MainWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:views="clr-namespace:GameLauncher.View"
         mc:Ignorable="d"
         Title="GL" Height="400" Width="700" MinWidth="700"
-        DataContext="{Binding Main, Source={StaticResource Locator}}" Loaded="Window_Loaded">
+        DataContext="{Binding Main, Source={StaticResource Locator}}" Loaded="Window_Loaded" Closing="Window_Closing">
 
     <Window.Resources>
 
@@ -18,6 +18,10 @@
 
         <DataTemplate DataType="{x:Type VM:GameViewModel}">
             <views:GameView />
+        </DataTemplate>
+
+        <DataTemplate DataType="{x:Type VM:AboutViewModel}">
+            <views:AboutView />
         </DataTemplate>
 
     </Window.Resources>
@@ -31,7 +35,7 @@
         <!-- Menu bar -->
         <Grid Grid.Row="0">
 
-            <ItemsControl ItemsSource="{Binding NavItems}" HorizontalAlignment="Right"  VerticalAlignment="Center" >
+            <ItemsControl ItemsSource="{Binding Appstate.NavItems}" HorizontalAlignment="Right"  VerticalAlignment="Center" >
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <Grid Margin="0,0,5,0" ToolTip="{Binding Caption}" Background="Transparent">
@@ -77,6 +81,11 @@
                                             <DataTrigger Binding="{Binding Index}" Value="3">
                                                 <Setter Property="Image.Source" Value="{StaticResource AddIcon}" />
                                             </DataTrigger>
+
+                                            <DataTrigger Binding="{Binding Index}" Value="4">
+                                                <Setter Property="Image.Source" Value="{StaticResource AboutIcon}" />
+                                            </DataTrigger>
+
                                         </Style.Triggers>
                                     </Style>
                                 </Image.Style>
@@ -96,7 +105,7 @@
         </Grid>
 
         <!-- Content view -->
-        <ContentControl Grid.Row="1" Content="{Binding Appstate.Viewhandler.CurrentView}" Focusable="False" />
+        <ContentControl Grid.Row="1" Content="{Binding Appstate.CurrentView}" Focusable="False" />
 
     </Grid>
 </Window>
