--- a/GameLauncher/View/EditGameView.xaml
+++ b/GameLauncher/View/EditGameView.xaml
@@ -31,8 +31,8 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    
-    <Grid Margin="5" Background="White"
+
+    <Grid Margin="20,5,5,5" Background="White"
           ScrollViewer.CanContentScroll="True">
 
         <Grid.RowDefinitions>
@@ -45,7 +45,7 @@
             <ColumnDefinition Width="150"/>
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
-        
+
         <!-- Title -->
         <TextBlock Grid.Row="0" Grid.Column="0" FontWeight="SemiBold" FontSize="14" Margin="0,0,0,5">
             <TextBlock.Style>
@@ -62,25 +62,26 @@
                 </Style>
             </TextBlock.Style>
         </TextBlock>
-        
+
         <!-- Game input form -->
         <Grid Grid.Row="1" Grid.Column="0"  MaxWidth="400" Width="400" HorizontalAlignment="Left">
             <StackPanel>
-                
+
                 <!-- Game title -->
                 <TextBlock Text="Title" />
                 <TextBox Text="{Binding Game.Title, UpdateSourceTrigger=PropertyChanged, 
                                         ValidatesOnDataErrors=True, NotifyOnValidationError=True}" 
-                         Validation.Error="Validation_Error" />
-                
+                          Validation.Error="Validation_Error" />
+
                 <!-- Game description -->
                 <TextBlock Text="Description" />
                 <TextBox Text="{Binding Game.Description}" Height="48" 
                          AcceptsReturn="True"
+                         TextWrapping="Wrap"
                          ScrollViewer.CanContentScroll="True"
                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                          ScrollViewer.VerticalScrollBarVisibility="Auto"/>
-                
+
                 <!-- Platform -->
                 <Grid Margin="0,5,0,0">
                     <Grid.ColumnDefinitions>
@@ -89,10 +90,10 @@
                     </Grid.ColumnDefinitions>
 
                     <TextBlock Grid.Column="0" Text="Platform " VerticalAlignment="Center" />
-                    <ComboBox Grid.Column="1" Text="{Binding Game.Platform}"
+                    <ComboBox Grid.Column="1" Text="{Binding Game.Platform}" ItemsSource="{Binding PlatformSuggestions}"
                               HorizontalAlignment="Left" Width="300" IsEditable="True" />
                 </Grid>
-                
+
                 <!-- Image filepath -->
                 <TextBlock Text="Image path" Margin="0,5,0,0" />
                 <Grid>
@@ -100,13 +101,13 @@
                         <ColumnDefinition Width="30" />
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    
+
                     <Button Grid.Column="0" Margin="0,0,5,0">...</Button>
 
                     <TextBox Grid.Column="1" Text="{Binding Game.ImageFilePath}" IsReadOnly="True" />
 
                 </Grid>
-                
+
                 <!-- Execute Command -->
                 <TextBlock Margin="0,10,0,0" Text="Command : " />
                 <TextBox Text="{Binding Game.StartCommand, UpdateSourceTrigger=PropertyChanged,
@@ -115,13 +116,13 @@
                 <!-- Buttons -->
                 <StackPanel Margin="0,15,0,0" Orientation="Horizontal">
                     <Button x:Name="okBtn" Width="60" Margin="0,0,5,0" 
-                            Command="{Binding AcceptCommand}">OK</Button>
-                    <Button Width="60">Cancel</Button>
+                            Command="{Binding AcceptCommand}">Save</Button>
+                    <Button Width="60" Command="{Binding CancelCommand}">Cancel</Button>
                 </StackPanel>
 
             </StackPanel>
         </Grid>
-        
+
         <!-- Image preview -->
         <Border Grid.Row="1" Grid.Column="1" 
                 Margin="0,17,0,0"
@@ -132,6 +133,6 @@
                 BorderBrush="Black">
             <Rectangle Fill="LightBlue" Width="100" Height="100" />
         </Border>
-                
+
     </Grid>
 </UserControl>
