--- a/GameLauncher/View/AboutView.xaml
+++ b/GameLauncher/View/AboutView.xaml
@@ -49,7 +49,7 @@
 
 
         <!-- Title -->
-        <TextBlock Grid.Row="0" Grid.Column="1" Margin="5" Text="{Binding Title}" 
+        <TextBlock Grid.Row="0" Grid.Column="1" Margin="5" Text="GameLauncher" 
                    FontSize="20" 
                    FontWeight="Bold" 
                    HorizontalAlignment="Left"/>
